<resources>
    <string name="app_name">I\'m Fine</string>
    <string name="tag_line">…but are you really?</string>

    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="confirm_deletion_description">Are you sure you want to delete the entry from %s? This cannot be undone.</string>

    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>

    <string name="general">General</string>
    <string name="your_name">Your Name</string>

    <string name="create_entry">Create Entry</string>
    <string name="add_entry">Add Entry</string>

    <string name="add_some_entries">Start adding entries!</string>

    <string name="emotion_neutral">😐</string>
    <string-array name="emotions">
        <item>😭</item>
        <item>☹️</item>
        <item>🙁</item>
        <item>@string/emotion_neutral</item>
        <item>🙂</item>
        <item>☺</item>
        <item>😄</item>
    </string-array>

    <string-array name="entry_description_encouragements">
        <item>Care to share why?</item>
        <item>Tell me why, if you\'d like.</item>
    </string-array>

    <string name="date_back">Date back (optional)</string>
    <string name="invalid_date">Date invalid (yyyy-MM-dd, HH:mm)</string>

    <string-array name="greetings">
        <item>Hello, %s!</item>
        <item>Hi, %s!</item>
        <item>Welcome back, %s.</item>
        <item>Great to see you again, %s.</item>
    </string-array>

    <string-array name="average_rating_0">
        <item>Please talk to someone you trust.</item>
        <item>Take a break from anything that might bother you, and please get better.</item>
        <item>Don\'t let minor issues get to you!</item>
        <item>Whatever happens, keep in mind; life\'s boring, but don\'t let that get you down.</item>
        <item>You\'re on a good path; make the least biggest moments count the most.</item>
        <item>I\'m glad to see you\'re happy.</item>
        <item>You\'re on fire. Keep up the good mood.</item>
    </string-array>

    <string-array name="average_rating_1">
        <item>I understand how you feel. Just know that it\'s alright to cry if you feel like it.</item>
        <item>Take care of yourself, I don\'t want you to damage your life.</item>
        <item>You haven\'t been feeling well lately. Please take care of yourself.</item>
        <item>Keep your head up - you never know what might come up in the near future!</item>
        <item>Always remember, a short smile can go a long way.</item>
        <item>Keep up the good attitude!</item>
        <item>Amazing to see how well you\'ve been doing for yourself.</item>
    </string-array>
</resources>