<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_entry"
        android:textSize="22sp"
        android:fontFamily="@font/manrope_semibold"/>

    <TextView
        android:id="@+id/current_emotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emotion_neutral"
        android:textAlignment="center"
        android:textSize="48sp"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="1.0"
        android:valueFrom="0.0"
        android:valueTo="6.0"
        android:value="3.0"
        android:layout_marginTop="16dp"
        app:labelBehavior="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/date_back">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="?attr/colorError"
            android:layout_marginEnd="4dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

</LinearLayout>